Closed Bug 1616549 Opened 6 years ago Closed 6 years ago

toolkit/components/antitracking/test/browser/browser_networkIsolation.js failed with SSLTokensCache enabled

Categories

(Core :: Security: PSM, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

References

Details

(Whiteboard: [psm-assigned])

Attachments

(1 file)

See https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=289380805&repo=try&lineNumber=1661.

The reason of this test failure is that SSL_ResetHandshake is called from
nsNSSSocketInfo::ProxyStartSSL after nsSocketTransport::InitiateSocket, so the session id set at here is cleared.

Assignee: nobody → kershaw
Blocks: 1607257
Summary: toolkit/components/antitracking/test/browser/browser_networkIsolation.js failure with SSLTokensCache enabled → toolkit/components/antitracking/test/browser/browser_networkIsolation.js failed with SSLTokensCache enabled
Priority: -- → P1
Whiteboard: [psm-assigned]
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dd2d90ad1312 Set resumption token again after handshake reset r=keeler
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: