Bug 1616549 - Set resumption token again after handshake reset r=keeler

Differential Revision: https://phabricator.services.mozilla.com/D63319