security/manager/ssl/CommonSocketControl.cpp
@@ -269,3 +269,8 @@ NS_IMETHODIMP
 CommonSocketControl::GetPeerId(nsACString& aResult) {
   return NS_ERROR_NOT_IMPLEMENTED;
 }
+
+NS_IMETHODIMP
+CommonSocketControl::SetResumptionTokenFromExternalCache() {
+  return NS_ERROR_NOT_IMPLEMENTED;
+}
