security/manager/ssl/nsNSSIOLayer.h
@@ -69,6 +69,7 @@ class nsNSSSocketInfo final : public CommonSocketControl {
   NS_IMETHOD GetEsniTxt(nsACString& aEsniTxt) override;
   NS_IMETHOD SetEsniTxt(const nsACString& aEsniTxt) override;
   NS_IMETHOD GetPeerId(nsACString& aResult) override;
+  NS_IMETHOD SetResumptionTokenFromExternalCache() override;
 
   PRStatus CloseSocketAndDestroy();
 
